Oauth2 migration completed. All test passed
